[package]
edition = "2024"
name = "dark-carapace"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "dark-carapace"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
log = "0.4"
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-alloc = "0.9.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embassy-futures = "0.1"
embassy-sync = "0.7"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32",
  "unstable",
] }
static_cell = "2.1.1"
trouble-host = "0.5.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
